=================== Release 1.0 2016-XX-XX =====================
Description
    * First alpha version of the App.
Functionalities
    * Ability to record travels.
    * Ability to visualize travels.
        * Travel distance.
        * Stops (Time, Location)
Changes
    * Version 1.0 Build 01 (2016/XX/XX)
        * Added support for simulating travels. (2016/08/05)
        * Added new images, icons. (2016/08/05)
        * Added base support for *Previous Travels Table*. (2016/06/22)
        * Added base support for file serialisation, and for the custom GDSA database. And support for pod *DeviceKit*. (2016/06/17)
        * Corrected minor bug. (2016/06/09/)
        * Mayor modifications: Added base support for Filters & Detection Systems. And some more. (2016/06/09)
        * Removed support for the *Realm* database. (2016/06/06)
        * Added support for the *Realm* database. (2016/05/31)
        * Added map travel information overlay support. (2016/05/27)
        * Some minor modifications. (2016/05/26)
        * Improved support for initial coordinates. Added pins for start and end points. Some other minor modifications. (2016/05/18)
        * Second usable version. Tested on trip to UCA on 17/05. (2016/05/17)
        * First usable version. Tested on trip to UCA on 16/05 (On notebook). Produced an error margin of 1.52% in regards to odometer. (2016/05/17)
        * Added base support for the following views: Main, RecordTravel, ViewTravel. (2016/05/13)